--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ python = "^3.8"
 importlib-metadata = {version = "^1.0", python = "<3.8"}
 rich = "^9.0.1"
 click = "^7.1.2"
-consulate = "^0.6.0"
 durations = "^0.3.3"
 spotinst-sdk = "^1.0.51"
+python-consul2 = "^0.1.5"
 stringcase = "^1.2.0"
 attrs = "^20.2.0"
 python-configuration = {extras = ["yaml"], version = "^0.8.1"}
