--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ attrs = "^20.2.0"
 python-configuration = {extras = ["yaml"], version = "^0.8.1"}
 semver = "^2.13.0"
 requests = "^2.24.0"
+boto3 = "^1.16.17"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
